data/derived/fa15/progs/unify/prog2705.ml.out
Characters 362-366:
  | Ceiling e' -> ceil(e')
                      ^^^^
Error: This expression has type expr but an expression was expected of type
         float
